# godot-cpp-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
nativetest1/: Spatial.tscn  project.godot  run.bat
src/: CMakeLists.txt  gdexample.cpp  gdexample.h  gdlibrary.cpp
